# mownit

lab2/: CMakeLists.txt  README.md
lab2/connections/: dwa_losowe_polaczone_mostkiem  dwudzielny  graf_kubiczny_trzy_regularny  graf_sierpinskiego  prosty_graf  siatka_10x10  siatka_6x6
lab2/src/: circuit.cpp  circuit.h  matrix.c  matrix.h  zad1.c  zad2.c  zad3.cpp
